# Gabri_sInvaders

./: ActiveSprite.cpp  ActiveSprite.h  Alien.cpp  Alien.h  CMakeLists.txt  GameEngine.cpp  GameEngine.h  LICENSE  README.md  Ship.cpp  Ship.h  Sprite.cpp  Sprite.h  main.cpp
include/: Alien.h  Background.h  Bullet.h  Character.h  Entity.h  GameEngine.h  Ship.h
src/: ActiveSprite.cpp  Alien.cpp  Background.cpp  Bullet.cpp  Character.cpp  Entity.cpp  GameEngine.cpp  Ship.cpp  Sprite.cpp
test/: CMakeLists.txt  testAlien.cpp  testEntity.cpp  testGameEngine.cpp  testShip.cpp
